--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                             <a href="zanas.html" class="link">ЗА НАС</a>
                         </li>
                         <li class="nav-links">
-                            <a href="mobil.html" class="link">ПРОДУКТИ</a>
+                            <a href="#main" class="link">ПРОДУКТИ</a>
+                        </li>
+                        <li class="nav-links">
+                            <a href="#main" class="link">ПРОДУКТИ</a>
                         </li>
                     </ul>
                 </div>
